--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -23,10 +23,10 @@
  .women-header-1 {
     text-align: center;
     font-size: 3rem;
-    color: white;
-    background-color: #0d9488; /* Teal color for brand consistency */
+    color: rgb(16, 198, 211);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 20px;
-    border: 7px solid #14b8a6; /* A lighter teal border */
+    
     padding: 10px;
   }
 /* Hero Section */
